src/test/deca/context/valid/created/sans_objet/operateur_boolean_2.deca
// Description:
//    opereateur  booléenne ||
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2024

{   
    int x=1;
    int y=2;
   if(x==1 || y==1){
      println("c'est ok");
   }
}
