src/test/deca/context/invalid/created/sans_objet/affectation_float_1.deca
// Description:
//    Programme minimaliste utilisant float.
//
// Resultats:
//  error : invalid assign
//
// Historique:
//    cree le 13/01/2024

{
        float x;
        x=0xFF;
}